--- a/ulwazi/theme/ulwazi/static/css/vanilla-main.css
+++ b/ulwazi/theme/ulwazi/static/css/vanilla-main.css
@@ -12655,4 +12655,13 @@ p {
   font-size: 14px !important;
 }
 
+/* Compacting list elements */
+.p-list--unordered .p-list__item,
+.p-list--unordered .p-list__item:not(.task-list-item) p,
+.p-list--ordered .p-list__item,
+.p-list--ordered .p-list__item:not(.task-list-item) p {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
 /*# sourceMappingURL=vanilla-main.css.map */
